fixing spacing on layout

--- a/style.css
+++ b/style.css
@@ -13,11 +13,14 @@ navbar {
   align-items: baseline;
   justify-content: space-between;
   background-color: #1f2937;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 navbar a {
-  color: #f9faf8;
+  color: #e5e7eb;
   text-decoration: none;
+  font-size: 18px;
 }
 .logo {
   font-size: 24px;
@@ -29,10 +32,12 @@ navbar a {
   align-items: center;
   padding: 60px;
   border: solid black 1px;
-  justify-content: center;
-  gap: 100px;
+  justify-content: space-between;
+  /* gap: 100px; */
   background-color: #1f2937;
   color: #f9faf8;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 .container1 button {
@@ -60,13 +65,15 @@ navbar a {
   text-align: center;
   font-size: 36px;
   color: #1f2937;
+  padding: 100px;
 }
 
 .container2 {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  border: solid black 1px;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 .item {
@@ -76,21 +83,24 @@ navbar a {
   text-align: center;
   width: 140px;
   color: #e5e7eb;
-  border: solid black 1px;
 }
 
 .item .image-placeholder {
   height: 140px;
   width: 140px;
   border: solid rgb(45, 116, 222) 3px;
-  border-radius: 3px;
+  border-radius: 20px;
 }
 .container3 {
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   align-items: end;
+  justify-content: center;
   background-color: #e5e7eb;
-  border: solid black 1px;
+  height: 300px;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 .quote {
@@ -98,7 +108,6 @@ navbar a {
   font-weight: lighter;
   font-style: italic;
   color: #1f2937;
-  border: solid black 1px;
 }
 
 .quote-author {
@@ -107,9 +116,9 @@ navbar a {
 
 .container4 {
   margin: 60px;
-  padding:30px;
+  padding: 30px;
   height: 140px;
-  gap:30px;
+  gap: 30px;
   border-radius: 10px;
   display: flex;
   justify-content: space-around;
